[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hackathon2"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
json-store-client = "^1.1"
flask-cors = "^3.0"
flask-limiter = "^1.2"
[tool.poetry.dev-dependencies]
